@@ -1,3 +1,11 @@
+2008-01-26  Kai Tietz  <kai.tietz@onevision.com>
+
+        * sys/time.h: Remove declaration of gettimeofday for
+        libiberty sake.
+        Add declaration of mingw_gettimeofday method.
+        * time.h: Add gettimeofday declaration in protected clause.
+        Add declaration of mingw_gettimeofday method.
+
 2008-01-23  Kai Tietz  <kai.tietz@onevision.com>
 
         * sys/time.h: Add gettimeofday declaration for not __STRICT_ANSI__.
